feat: add ability to add task

--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,1 +1,9 @@
-<h2>Create ToDo</h2>
+<form action="/create" method="POST">
+    <h2>Create todo</h2>
+    <div class="input-field">
+        <input type="text" name="title">
+        <label>Todo title</label>
+    </div>
+
+    <button type="submit" class="btn">Create</button>
+</form>
